Normalize transport payloads & scheduler API changes
Add a TransportJsonValueNormalizer to enforce JSON-safe, deeply immutable payload/value shapes and wire it into TransportPacket, TaskResultReport, TransportPacketViews and TransportPacketFactory. Update transport boundary docs to explicitly enumerate allowed JSON-safe types and add tests that validate immutability and rejection of unsupported JVM-only values. Introduce API changes to task scheduling and retries: rename retryTaskMsg to retryTaskMessage and change SchedulingResult to carry a scheduledCount (with new factory overloads) instead of a list of TaskMsg, and update all callers/tests accordingly. Refactor TaskMessageAttemptSupport.buildDispatchedProjection to accept taskId and messageId (rather than a TaskMsg). Refactor TaskStateValidator to support construction with either a TaskManager or a TaskStateRuntimePort and delegate reads via private helpers; remove some write/publish methods from TaskStateRuntimePort. Minor docs and test adjustments to align with the new compatibility/projection wording and payload handling.